# libra-bbchain-port

./: Cargo.toml  README.md  deps  transport.sh
client/cli/src/: client_proxy.rs  commands.rs  dev_commands.rs  lib.rs
common/metrics/: Cargo.toml
config/config-builder/src/: validator_config.rs
docker/mint/: localrun.sh  server.py
docker/validator-dynamic/: localrun.sh
json-rpc/: Cargo.toml
language/ir-testsuite/tests/testsuite/modules/custom_modules/tests/: Issuer-v2.mvir
language/move-lang/src/test_utils/: mod.rs
localnet/: faucetkey  mnemonic_file
testsuite/bbchain-test/: Cargo.toml
testsuite/bbchain-test/grafana/: performance.json  validators.json
testsuite/bbchain-test/src/: client.rs  dev_proxy.rs  instance.rs  libra_client.rs  main.rs  mint.key  tx_emitter.rs
testsuite/bbchain-test/src/modules/: mint.key
testsuite/bbchain-test/src/modules/bbchain/: EarmarkedProofs.mvir  Issuer.mvir  dummy.mvir  wallet
testsuite/bbchain-test/src/modules/move/: EarmarkedProofs.move  Issuer.move  proofs.move
testsuite/bbchain-test/src/modules/scripts/: has_issuer_resource.move  proofs_1.mvir  register_issuer.move
testsuite/bbchain-test/src/modules/scripts/holder/: claim_credential_proof.move
testsuite/bbchain-test/src/modules/scripts/issuer/: aggregate_credential_proof.move  init_holder.move  init_root_issuer.move  register_credential.move  register_holder.move  register_sub_issuer.move
testsuite/bbchain-test/src/modules/scripts/owner/: sign_credential.move
testsuite/bbchain-test/src/modules/scripts/verifier/: verify_digest.move
