[package]
name = "bbchain-test"
version = "0.1.0"
authors = [""]
description = "BBchain cluster test"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
structopt = "0.3.12"
anyhow = "1.0"
once_cell = "1.3.1"
regex = { version = "1.3.6", default-features = false, features = ["std", "perf"] }
hex = "0.4.2"
itertools = "0.9.0"
termion = "1.5.3"
reqwest = { version="0.10.4", features=["blocking", "json", "rustls-tls"], default_features = false }
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
rand = "0.7.3"
chrono = "0.4.11"

cli = { path = "../../client/cli", version = "0.1.0" }
config-builder = { path = "../../config/config-builder", version = "0.1.0" }
libra-config = { path = "../../config", version = "0.1.0", features = ["fuzzing"] }
debug-interface = { path = "../../common/debug-interface", version = "0.1.0" }
libra-logger = { path = "../../common/logger", version = "0.1.0" }
libra-crypto = { path = "../../crypto/crypto", version = "0.1.0", features = ["cloneable-private-keys"] }
libra-temppath = { path = "../../common/temppath", version = "0.1.0" }
libra-types = { path = "../../types", version = "0.1.0" }
workspace-builder = { path = "../../common/workspace-builder", version = "0.1.0" }
transaction-builder = { path = "../../language/transaction-builder", version = "0.1.0" }
util = { path = "../../common/util", version = "0.1.0", package = "libra-util" }
compiler = { path = "../../language/compiler", version = "0.1.0" }
lcs = { path = "../../common/lcs", version = "0.1.0", package = "libra-canonical-serialization" }
libra-wallet = { path = "../../client/libra-wallet", version = "0.1.0" }
libra-json-rpc-client = { path = "../../client/json-rpc", version = "0.1.0" }
libra-json-rpc = { path = "../../json-rpc", version = "0.1.0" }
stdlib = { path = "../../language/stdlib", version = "0.1.0" }

futures = "0.3.0"
tokio = { version = "0.2.13", features = ["full"] }
async-trait = "0.1.30"
